tests/errors/syn_call2.java
public class syn_call2 {
public static void main(String[] args){
method ( )
}
}